Fixed image z-index

--- a/components/ShotBody/styles.module.scss
+++ b/components/ShotBody/styles.module.scss
@@ -1,7 +1,7 @@
 @import '../../styles/variables.scss';
 
 .body {
-    &__image {
+    span {
         width: 100%;
         border-radius: 10px;
     }
