--- a/components/ShotSideMenu/styles.module.scss
+++ b/components/ShotSideMenu/styles.module.scss
@@ -10,6 +10,7 @@
     justify-content: center;
     align-items: center;
     transition: 0.2s;
+    z-index: 5;
 
     &_withOpenedComments {
         transform: translateX(130%);
